// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Line component should render 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

<mark
  className="c0 ui-kit-Placeholder-Line custom-placeholder"
/>
`;

exports[`the Line component should render children when isLoading is false 1`] = `"Rendered Child"`;

exports[`the Line component should render showLoadingAnimation 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

<mark
  className="c0 show-loading-animation ui-kit-Placeholder-Line custom-placeholder"
/>
`;

exports[`the Line component should render with a custom style 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
  background: salmon;
}

<mark
  className="c0 ui-kit-Placeholder-Line custom-placeholder"
/>
`;

exports[`the Line component should render with a custom width 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 50%;
}

<mark
  className="c0 ui-kit-Placeholder-Line custom-placeholder"
/>
`;
